gke/dagit-readonly-ingress.yaml
---
# Read-only Dagit Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagit-readonly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - dagit.34.71.77.125.nip.io
      secretName: dagster-dagit-read-only-tls
  rules:
    - host: dagit.34.71.77.125.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dagster-dagit-read-only
                port:
                  number: 80
